--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -467,7 +467,9 @@
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp" android:layout_margin="1dp" android:layout_marginTop="10dp">
+                    android:padding="5dp"
+                    android:layout_margin="1dp"
+                    android:layout_marginTop="10dp">
 
                 <EditText
                         android:background="@color/colorWhite"
